--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=DotGothic16&family=Noto+Serif+Display:ital@1&family=Noto+Serif+JP:wght@600&family=Zen+Antique+Soft&family=Zen+Dots&family=Zen+Kaku+Gothic+New:wght@700&family=Zen+Kurenaido&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
